m3d.h

    typedef uint32_t M3D_INDEX;
    typedef uint16_t M3D_INDEX;
    /* shape command */
    typedef struct
    {
        uint16_t type; /* shape type */
        uint32_t *arg; /* arguments array */
    } m3dc_t;
    /* shape entry */
    typedef struct
    {
        char *name;      /* name of the mathematical shape */
        M3D_INDEX group; /* group this shape belongs to or -1 */
        uint32_t numcmd; /* number of commands */
        m3dc_t *cmd;     /* commands array */
    } m3dh_t;
    /* label entry */
    typedef struct
    {
        char *name;         /* name of the annotation layer or NULL */
        char *lang;         /* language code or NULL */
        char *text;         /* the label text */
        uint32_t color;     /* color */
        M3D_INDEX vertexid; /* the vertex the label refers to */
    } m3dl_t;
    /* frame transformations / working copy skeleton entry */
    typedef struct
    {
        M3D_INDEX boneid; /* selects a node in bone hierarchy */
        M3D_INDEX pos;    /* vertex index new position */
        M3D_INDEX ori;    /* vertex index new orientation (quaternion) */
    } m3dtr_t;
    /* animation frame entry */
    typedef struct
    {
        uint32_t msec;          /* frame's position on the timeline, timestamp */
        M3D_INDEX numtransform; /* number of transformations in this frame */
        m3dtr_t *transform;     /* transformations */
    } m3dfr_t;
    /* model action entry */
    typedef struct
    {
        char *name;            /* name of the action */
        uint32_t durationmsec; /* duration in millisec (1/1000 sec) */
        M3D_INDEX numframe;    /* number of frames in this animation */
        m3dfr_t *frame;        /* frames array */
    } m3da_t;