src/bindings.rs

#[test]
fn bindgen_test_layout_m3dh_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dh_t>(),
        24usize,
        concat!("Size of: ", stringify!(m3dh_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dh_t>(),
        8usize,
        concat!("Alignment of ", stringify!(m3dh_t))
    );
    fn test_field_name() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dh_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dh_t),
                "::",
                stringify!(name)
            )
        );
    }
    test_field_name();
    fn test_field_group() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dh_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).group) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dh_t),
                "::",
                stringify!(group)
            )
        );
    }
    test_field_group();
    fn test_field_numcmd() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dh_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).numcmd) as usize - ptr as usize
            },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dh_t),
                "::",
                stringify!(numcmd)
            )
        );
    }
    test_field_numcmd();
    fn test_field_cmd() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dh_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cmd) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dh_t),
                "::",
                stringify!(cmd)
            )
        );
    }
    test_field_cmd();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dl_t {
    pub name: *mut ::std::os::raw::c_char,
    pub lang: *mut ::std::os::raw::c_char,
    pub text: *mut ::std::os::raw::c_char,
    pub color: u32,
    pub vertexid: M3D_INDEX,
}
#[test]
fn bindgen_test_layout_m3dl_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dl_t>(),
        32usize,
        concat!("Size of: ", stringify!(m3dl_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dl_t>(),
        8usize,
        concat!("Alignment of ", stringify!(m3dl_t))
    );
    fn test_field_name() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dl_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dl_t),
                "::",
                stringify!(name)
            )
        );
    }
    test_field_name();
    fn test_field_lang() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dl_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).lang) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dl_t),
                "::",
                stringify!(lang)
            )
        );
    }
    test_field_lang();
    fn test_field_text() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dl_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).text) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dl_t),
                "::",
                stringify!(text)
            )
        );
    }
    test_field_text();
    fn test_field_color() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dl_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).color) as usize - ptr as usize
            },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dl_t),
                "::",
                stringify!(color)
            )
        );
    }
    test_field_color();
    fn test_field_vertexid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dl_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).vertexid) as usize - ptr as usize
            },
            28usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dl_t),
                "::",
                stringify!(vertexid)
            )
        );
    }
    test_field_vertexid();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dtr_t {
    pub boneid: M3D_INDEX,
    pub pos: M3D_INDEX,
    pub ori: M3D_INDEX,
}
#[test]
fn bindgen_test_layout_m3dtr_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dtr_t>(),
        12usize,
        concat!("Size of: ", stringify!(m3dtr_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dtr_t>(),
        4usize,
        concat!("Alignment of ", stringify!(m3dtr_t))
    );
    fn test_field_boneid() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dtr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).boneid) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dtr_t),
                "::",
                stringify!(boneid)
            )
        );
    }
    test_field_boneid();
    fn test_field_pos() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dtr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).pos) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dtr_t),
                "::",
                stringify!(pos)
            )
        );
    }
    test_field_pos();
    fn test_field_ori() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dtr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).ori) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dtr_t),
                "::",
                stringify!(ori)
            )
        );
    }
    test_field_ori();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3dfr_t {
    pub msec: u32,
    pub numtransform: M3D_INDEX,
    pub transform: *mut m3dtr_t,
}
#[test]
fn bindgen_test_layout_m3dfr_t() {
    assert_eq!(
        ::std::mem::size_of::<m3dfr_t>(),
        16usize,
        concat!("Size of: ", stringify!(m3dfr_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3dfr_t>(),
        8usize,
        concat!("Alignment of ", stringify!(m3dfr_t))
    );
    fn test_field_msec() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dfr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).msec) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dfr_t),
                "::",
                stringify!(msec)
            )
        );
    }
    test_field_msec();
    fn test_field_numtransform() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dfr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).numtransform) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dfr_t),
                "::",
                stringify!(numtransform)
            )
        );
    }
    test_field_numtransform();
    fn test_field_transform() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3dfr_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).transform) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3dfr_t),
                "::",
                stringify!(transform)
            )
        );
    }
    test_field_transform();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct m3da_t {
    pub name: *mut ::std::os::raw::c_char,
    pub durationmsec: u32,
    pub numframe: M3D_INDEX,
    pub frame: *mut m3dfr_t,
}
#[test]
fn bindgen_test_layout_m3da_t() {
    assert_eq!(
        ::std::mem::size_of::<m3da_t>(),
        24usize,
        concat!("Size of: ", stringify!(m3da_t))
    );
    assert_eq!(
        ::std::mem::align_of::<m3da_t>(),
        8usize,
        concat!("Alignment of ", stringify!(m3da_t))
    );
    fn test_field_name() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3da_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).name) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(m3da_t),
                "::",
                stringify!(name)
            )
        );
    }
    test_field_name();
    fn test_field_durationmsec() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3da_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).durationmsec) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(m3da_t),
                "::",
                stringify!(durationmsec)
            )
        );
    }
    test_field_durationmsec();
    fn test_field_numframe() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3da_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).numframe) as usize - ptr as usize
            },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(m3da_t),
                "::",
                stringify!(numframe)
            )
        );
    }
    test_field_numframe();
    fn test_field_frame() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<m3da_t>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).frame) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(m3da_t),
                "::",
                stringify!(frame)
            )
        );
    }
    test_field_frame();
}
